<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs.msg</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>keyboard</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs.msg</depend>
  <depend>sensor_msgs.msg</depend>
  <depend>std_msgs.msg</depend>
  <depend>math</depend>
  <depend>json</depend>
  <depend>tf2_ros</depend>
  <depend>time</depend>
  <depend>dataclasses</depend>

  <exec_depend>robot_localization</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
